# hephaestus-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
hephaestus-macros/: Cargo.toml
hephaestus-macros/src/: lib.rs
src/: main.rs
src/lib/: buffer_objects.rs  camera.rs  engine.rs  entity.rs  gui.rs  input.rs  lib.rs  light.rs  logger.rs  material.rs  mesh_data.rs  object.rs  primitives.rs  renderer.rs  shaders.rs  world.rs
src/shaders/: ambient_frag.glsl  deferred_frag.glsl  deferred_vert.glsl  directional_frag.glsl  frag.glsl  vert.glsl
src/shaders/lighting/: frag.glsl  vert.glsl
